maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:42: error: value ! is not a member of Boolean
    if( getY()<getMondeHauteur()-1!aMurNord(getX(),getY()+1) && getIndication(getX(),getY()+1)<ind){
                                  ^JediEscaper:46: error: value ! is not a member of Boolean
    if(getX()<getMondeLargeur()-1!aMurOuest(getX()+1,getY()) && getIndication(getX()+1,getY())<ind){
                                 ^